see if it works

--- a/lib/chapter1.tex
+++ b/lib/chapter1.tex
@@ -16,11 +16,7 @@ En cuanto a los pacientes beneficiados por el uso de la OAF, en el artículo (\c
 
 Actualmente en los servicios de pediatría de los hospitales no se dispone de marcadores clínicos, biológicos o inmunológicos precoces que permitan prever la evolución de los pacientes ingresados por bronquiolitis. Tan solo se cuenta con los datos de la exploración física y de las escalas validadas, parcialmente objetivas, para determinar su gravedad en el momento del ingreso, pero no se permite prever su evolución. Estos mismos datos son en los que se apoya el equipo sanitario para decidir si al paciente se la suministra OAF o se le lleva a la UCI pediátrica dónde se realizan otras técnicas para estabilizar el cuadro grave de bronquiolitis. Esta información ha sido obtenida a raíz de mantener conversaciones con el servicio de pediatría del Hospital Universitario Gregorio Marañón. 
 
-<<<<<<< HEAD
-Por otro lado existen pocos estudios publicados sobre la utilidad y eficacia de los sistemas de telemetría continua fuera de las unidades de cuidados intensivos; aunque se ha demostrado en el ámbito de cuidados intermedios de neonatología su utilidad para prever el ingreso de los pacientes en cuidados intensivos neonatales. ()\cite{Solis2022})
-=======
-Por otro lado existen pocos estudios publicados sobre la utilidad y eficacia de los sistemas de telemetría continua fuera de las unidades de cuidados intensivos; aunque se ha demostrado en el ámbito de cuidados intermedios de neonatología su utilidad para prever el ingreso de los pacientes en cuidados intensivos neonatales. (\cite{Solis2022})
->>>>>>> c5f5a7821b232e40256fd54db94bf0d64b79b333
+Por otro lado existen pocos estudios publicados sobre la utilidad y eficacia de los sistemas de telemetría continua fuera de las unidades de cuidados intensivos; aunque se ha demostrado que son de utilidad en el ámbito de cuidados intermedios de neonatología para prever el ingreso de los pacientes en cuidados intensivos neonatales. (\cite{Solis2022})
 
 \subsection{Motivation for the research}
 
