--- a/biblio.bib
+++ b/biblio.bib
@@ -13,6 +13,14 @@
    year = {2021},
 }
 
+@report{Amanda,
+   abstract = {OBJECTIVES: Cardiorespiratory and pulse oximetry monitoring in children who are hospitalized should balance benefits of detecting deterioration with potential harms of alarm fatigue. We developed recommendations for monitoring outside the ICU on the basis of available evidence and expert opinion. METHODS: We conducted a comprehensive literature search for studies addressing the utility of cardiorespiratory and pulse oximetry monitoring in common pediatric conditions and drafted candidate monitoring recommendations based on our findings. We convened a panel of nominees from national professional organizations with diverse expertise: nursing, medicine, respiratory therapy, biomedical engineering, and family advocacy. Using the RAND/University of California, Los Angeles Appropriateness Method, panelists rated recommendations for appropriateness and necessity in 3 sequential rating sessions and a moderated meeting. RESULTS: The panel evaluated 56 recommendations for intermittent and continuous monitoring for children hospitalized outside the ICU with 7 common conditions (eg, asthma, croup) and/or receiving common therapies (eg, supplemental oxygen, intravenous opioids). The panel reached agreement on the appropriateness of monitoring recommendations for 55 of 56 indications and on necessity of monitoring for 52. For mild or moderate asthma, croup, pneumonia, and bronchiolitis, the panel recommended intermittent vital sign or oximetry measurement only. The panel recommended continuous monitoring for severe disease in each respiratory condition as well as for a new or increased dose of intravenous opiate or benzodiazepine. CONCLUSIONS: Expert panel members agreed that intermittent vital sign assessment, rather than continuous monitoring, is appropriate management for a set of specific conditions of mild or moderate severity that require hospitalization. WHAT'S KNOWN ON THIS SUBJECT: Continuous cardiorespiratory and pulse oximetry monitors (commonly used to surveil for deterioration in children who are hospitalized) can negatively impact patient safety because of excessive monitor alarms. There are no national guidelines for using monitors in most common pediatric conditions. WHAT THIS STUDY ADDS: Leveraging existing evidence, a national expert panel reached agreement that intermittent heart rate, respiratory rate, and pulse oximetry assessment, rather than continuous monitoring, is appropriate management for a set of specific conditions of mild or moderate severity that require hospitalization.},
+   author = {Amanda C Schondelmeyer and Maya L Dewan and Patrick W Brady and Kristen M Timmons and Rhonda Cable and Maria T Britto and Christopher P Bonafide},
+   title = {Cardiorespiratory and Pulse Oximetry Monitoring in Hospitalized Children: A Delphi Process},
+   url = {www.aappublications.org/news},
+}
+
+
 @article{Patel2003,
    abstract = {Objective: To determine whether oral albuterol is effective in reducing symptomatology of acute viral bronchiolitis in infants with mild-to-moderate illness. Study design: In a randomized, double-blind trial, previously well infants were randomized upon discharge from the emergency department to receive either albuterol (0.1 mg/kg/dose) three times per day or placebo three times per day for 7 days. Daily standardized telephone interviews were conducted for as long as 14 days. The primary outcome was the time to resolution of illness. Secondary outcomes included time to normal feeding, normal sleeping, quiet breathing, resolved cough, and coryza. Results: We studied 129 infants (albuterol, n = 64; placebo, n = 65). Baseline characteristics were similar between groups. The overall mean age was 5.3 months, 60\% were male, and 49 of 61 tested infants were positive for respiratory syncytial virus. The median (95\% confidence interval) time to resolution of illness (days) was similar: albuterol, 9.0 (8-13); placebo, 8.0 (7-9); P = .3) (log-rank test). There were no significant group differences in any secondary outcome. Health care revisit and admission rates were similar between groups. Conclusions: No significant group differences in either primary or secondary outcomes in infants treated with oral albuterol versus placebo were found. The widespread use of oral albuterol in this patient group is not recommended.},
    author = {Hema Patel and Serge Gouin and Robert W. Platt},
