--- a/biblio.bib
+++ b/biblio.bib
@@ -13,7 +13,7 @@
    year = {2021},
 }
 
-@report{Amanda,
+@report{AmandaC,
    abstract = {OBJECTIVES: Cardiorespiratory and pulse oximetry monitoring in children who are hospitalized should balance benefits of detecting deterioration with potential harms of alarm fatigue. We developed recommendations for monitoring outside the ICU on the basis of available evidence and expert opinion. METHODS: We conducted a comprehensive literature search for studies addressing the utility of cardiorespiratory and pulse oximetry monitoring in common pediatric conditions and drafted candidate monitoring recommendations based on our findings. We convened a panel of nominees from national professional organizations with diverse expertise: nursing, medicine, respiratory therapy, biomedical engineering, and family advocacy. Using the RAND/University of California, Los Angeles Appropriateness Method, panelists rated recommendations for appropriateness and necessity in 3 sequential rating sessions and a moderated meeting. RESULTS: The panel evaluated 56 recommendations for intermittent and continuous monitoring for children hospitalized outside the ICU with 7 common conditions (eg, asthma, croup) and/or receiving common therapies (eg, supplemental oxygen, intravenous opioids). The panel reached agreement on the appropriateness of monitoring recommendations for 55 of 56 indications and on necessity of monitoring for 52. For mild or moderate asthma, croup, pneumonia, and bronchiolitis, the panel recommended intermittent vital sign or oximetry measurement only. The panel recommended continuous monitoring for severe disease in each respiratory condition as well as for a new or increased dose of intravenous opiate or benzodiazepine. CONCLUSIONS: Expert panel members agreed that intermittent vital sign assessment, rather than continuous monitoring, is appropriate management for a set of specific conditions of mild or moderate severity that require hospitalization. WHAT'S KNOWN ON THIS SUBJECT: Continuous cardiorespiratory and pulse oximetry monitors (commonly used to surveil for deterioration in children who are hospitalized) can negatively impact patient safety because of excessive monitor alarms. There are no national guidelines for using monitors in most common pediatric conditions. WHAT THIS STUDY ADDS: Leveraging existing evidence, a national expert panel reached agreement that intermittent heart rate, respiratory rate, and pulse oximetry assessment, rather than continuous monitoring, is appropriate management for a set of specific conditions of mild or moderate severity that require hospitalization.},
    author = {Amanda C Schondelmeyer and Maya L Dewan and Patrick W Brady and Kristen M Timmons and Rhonda Cable and Maria T Britto and Christopher P Bonafide},
    title = {Cardiorespiratory and Pulse Oximetry Monitoring in Hospitalized Children: A Delphi Process},
