--- a/lib/chapter1.tex
+++ b/lib/chapter1.tex
@@ -18,7 +18,7 @@ Actualmente en los servicios de pediatría de los hospitales no se dispone de ma
 
 Por otro lado existen pocos estudios publicados sobre la utilidad y eficacia de los sistemas de telemetría continua fuera de las unidades de cuidados intensivos; aunque se ha demostrado que son de utilidad en el ámbito de cuidados intermedios de neonatología para prever el ingreso de los pacientes en cuidados intensivos neonatales. (\cite{Solis2022})
 
-Es un hecho que la monitorización cardiorrespiratoria es una parte fundamental de la hospitalización pediátrica. Esta consiste en la interpretación de la información emitida por los sistemas de vigilancia que miden las constantes vitales de los pacientes. El nivel de gravedad del paciente indicará el tipo de monitorización que precisa en cada momento; en pacientes con inestabilidad respiratoria está indicada la monitorización cardiorrespiratoria continua en las plantas de hospitalización. (\cite{Amanda}) 
+Es un hecho que la monitorización cardiorrespiratoria es una parte fundamental de la hospitalización pediátrica. Esta consiste en la interpretación de la información emitida por los sistemas de vigilancia que miden las constantes vitales de los pacientes. El nivel de gravedad del paciente indicará el tipo de monitorización que precisa en cada momento; en pacientes con inestabilidad respiratoria está indicada la monitorización cardiorrespiratoria continua en las plantas de hospitalización. (\cite{AmandaC}) 
 
 \subsection{Motivation for the research}
 
