--- a/biblio.bib
+++ b/biblio.bib
@@ -20,6 +20,38 @@
    url = {www.aappublications.org/news},
 }
 
+@article{Masclans2015,
+   abstract = {Acute respiratory failure represents one of the most common causes of intensive care unit admission and oxygen therapy remains the first-line therapy in the management of these patients. In recent years, high-flow oxygen via nasal cannula has been described as a useful alternative to conventional oxygen therapy in patients with acute respiratory failure. High-flow oxygen via nasal cannula rapidly alleviates symptoms of acute respiratory failure and improves oxygenation by several mechanisms, including dead space washout, reduction in oxygen dilution and inspiratory nasopharyngeal resistance, a moderate positive airway pressure effect that may generate alveolar recruitment and an overall greater tolerance and comfort with the interface and the heated and humidified inspired gases. However, the experience in adults is still limited and there are no clinical guidelines to establish recommendations for their use. This article aims to review the existing evidence on the use of high-flow oxygen via nasal cannula in adults with acute respiratory failure and its possible applications, advantages and limitations.},
+   author = {J. R. Masclans and P. Pérez-Terán and O. Roca},
+   doi = {10.1016/J.MEDIN.2015.05.009},
+   issn = {0210-5691},
+   issue = {8},
+   journal = {Medicina Intensiva},
+   keywords = {Insuficiencia respiratoria aguda,Medicina intensiva,Oxigenoterapia de alto flujo},
+   month = {11},
+   pages = {505-515},
+   pmid = {26429697},
+   publisher = {Elsevier},
+   title = {Papel de la oxigenoterapia de alto flujo en la insuficiencia respiratoria aguda},
+   volume = {39},
+   url = {http://www.medintensiva.org/es-papel-oxigenoterapia-alto-flujo-insuficiencia-articulo-S0210569115001217},
+   year = {2015},
+}
+
+@report{FernandoR2010,
+   abstract = {Artículo de revisión La función respiratoria básica es el intercambio gaseoso de oxígeno y dióxido carbono; lo que implica un perfecto equilibrio y control entre los componentes del sistema respiratorio. Figura 1. Una falla en este proceso fundamental para la vida, es, en diferentes grados de intensidad, causa muy frecuente de solicitud de atenciones de salud, tanto prehospitalaria como hospitalaria. Por lo tanto es imprescindible aprender a reconocer rápidamente las circunstancias que la produjeron, así como también los síntomas y signos que encontramos en estos pacientes, de esta manera seremos capaces de una presunción diagnóstica rápida y atención inicial apropiada, aplicando inmediatamente las medidas de soporte básico y avanzado en forma eficiente a los pacientes con insuficiencia respiratoria aguda. DEFINICIÓN La insuficiencia respiratoria aguda (IRA) es la incapacidad del sistema respiratorio de cumplir su función básica, que es el intercambio gaseoso de oxígeno y dióxido de carbono entre el aire ambiental y la sangre circulante, ésta debe realizarse en forma eficaz y adecuada a las necesidades metabólicas del organismo, teniendo en cuenta la edad, los antecedentes y la altitud en que se encuentra el paciente. Entonces en la práctica, según Campbell: la insuficiencia respiratoria se define como la presencia de una hipoxemia arterial (PaO 2 menor de 60 mmHg), en reposo, a nivel del mar y respirando aire ambiental, acompañado o no de hipercapnia (PaCO 2 mayor de 45 mmHg). Denominaremos solo como hipoxemia cuando la PaO 2 se encuentre entre 60 y 80 mmHg 1, 2-4. En la atención prehospitalaria con guía de pulsioximetría, se pueden considerar que valores de Saturación de Oxígeno de 90% a 95% equivalen a PaO 2 de 60 a 80 mmHg (Hipoxemia) y si es de 90% equivale a una PaO 2 de 60 mmHg (Insuficiencia Respiratoria). FISIOLOGÍA Como consecuencia inicial en la insuficiencia respiratoria pueden presentarse alteraciones en el nivel de oxígeno (O 2) y/o de anhídrido carbónico (CO 2), esto se explica por qué dentro del sistema respiratorio podemos distinguir en primer término los pulmones y su circulación, que es donde se realiza el intercambio gaseoso, su alteración produce hipoxemia con normocapnia o hipercapnia y en segundo término a la bomba que lo ventila que comprende la pared toráxica que incluye la pleura y el diafragma así como los músculos respiratorios y los componentes del sistema nervioso central y periférico, cuya disfunción produce hipoventilación que produce principalmente hipercapnea y en menor grado hipoxemia, además podemos identificar problemas en la vía aérea que pueden causar ambos tipos de situaciones. Describir la insuficiencia respiratoria como hipoxémica o hipercarbica provee alguna información acerca del déficit fisiológico que la produce, sin embargo, una mejor comprensión y reconocimiento de la fisiopatología, considerando individualmente cada uno de los componentes del sistema respiratorio que son requeridos para su funcionamiento fisiológico, nos permitiría una estrategia de diagnóstico y tratamiento 2, 5, 6. Fisiología de los componentes del sistema respiratorio Sistema Nervioso: Esto es el sistema de control, y comprende el núcleo dorsal y ventral del grupo de control medular respiratorio y sus nervios aferentes y eferentes asociados. Estos actúan de común acuerdo con la corteza cerebral para determinar frecuencia y esfuerzo respiratorio. RESUMEN La función respiratoria básica es el intercambio gaseoso de oxígeno y dióxido carbono; lo que implica un perfecto equilibrio y control entre los componentes del sistema respiratorio. a insuficiencia respiratoria aguda (IRA) es la incapacidad del sistema respiratorio de cumplir su función básica, que es el intercambio gaseoso de oxígeno y dióxido de carbono. Palabras clave: Insuficiencia respiratoria. ABSTRACT Basic respiratory function is gas exchange of oxygen and carbon dioxide, which implies a perfect balance and control between the components of the respiratory system. acute respiratory failure (ARF) is the inability of the respiratory system to fulfill its basic function, which is the gas exchange of oxygen and carbon dioxide.},
+   author = {Fernando R Gutiérrez Muñoz},
+   issue = {4},
+   journal = {Acta Med Per},
+   keywords = {Insufficiency,Respiratory},
+   pages = {286},
+   title = {Insuficiencia respiratoria aguda Acute respiratory failure},
+   volume = {27},
+   year = {2010},
+}
+
+
+
 
 @article{Patel2003,
    abstract = {Objective: To determine whether oral albuterol is effective in reducing symptomatology of acute viral bronchiolitis in infants with mild-to-moderate illness. Study design: In a randomized, double-blind trial, previously well infants were randomized upon discharge from the emergency department to receive either albuterol (0.1 mg/kg/dose) three times per day or placebo three times per day for 7 days. Daily standardized telephone interviews were conducted for as long as 14 days. The primary outcome was the time to resolution of illness. Secondary outcomes included time to normal feeding, normal sleeping, quiet breathing, resolved cough, and coryza. Results: We studied 129 infants (albuterol, n = 64; placebo, n = 65). Baseline characteristics were similar between groups. The overall mean age was 5.3 months, 60\% were male, and 49 of 61 tested infants were positive for respiratory syncytial virus. The median (95\% confidence interval) time to resolution of illness (days) was similar: albuterol, 9.0 (8-13); placebo, 8.0 (7-9); P = .3) (log-rank test). There were no significant group differences in any secondary outcome. Health care revisit and admission rates were similar between groups. Conclusions: No significant group differences in either primary or secondary outcomes in infants treated with oral albuterol versus placebo were found. The widespread use of oral albuterol in this patient group is not recommended.},
