--- a/biblio.bib
+++ b/biblio.bib
@@ -39,7 +39,7 @@
 }
 
 @report{FernandoR2010,
-   abstract = {Artículo de revisión La función respiratoria básica es el intercambio gaseoso de oxígeno y dióxido carbono; lo que implica un perfecto equilibrio y control entre los componentes del sistema respiratorio. Figura 1. Una falla en este proceso fundamental para la vida, es, en diferentes grados de intensidad, causa muy frecuente de solicitud de atenciones de salud, tanto prehospitalaria como hospitalaria. Por lo tanto es imprescindible aprender a reconocer rápidamente las circunstancias que la produjeron, así como también los síntomas y signos que encontramos en estos pacientes, de esta manera seremos capaces de una presunción diagnóstica rápida y atención inicial apropiada, aplicando inmediatamente las medidas de soporte básico y avanzado en forma eficiente a los pacientes con insuficiencia respiratoria aguda. DEFINICIÓN La insuficiencia respiratoria aguda (IRA) es la incapacidad del sistema respiratorio de cumplir su función básica, que es el intercambio gaseoso de oxígeno y dióxido de carbono entre el aire ambiental y la sangre circulante, ésta debe realizarse en forma eficaz y adecuada a las necesidades metabólicas del organismo, teniendo en cuenta la edad, los antecedentes y la altitud en que se encuentra el paciente. Entonces en la práctica, según Campbell: la insuficiencia respiratoria se define como la presencia de una hipoxemia arterial (PaO 2 menor de 60 mmHg), en reposo, a nivel del mar y respirando aire ambiental, acompañado o no de hipercapnia (PaCO 2 mayor de 45 mmHg). Denominaremos solo como hipoxemia cuando la PaO 2 se encuentre entre 60 y 80 mmHg 1, 2-4. En la atención prehospitalaria con guía de pulsioximetría, se pueden considerar que valores de Saturación de Oxígeno de 90% a 95% equivalen a PaO 2 de 60 a 80 mmHg (Hipoxemia) y si es de 90% equivale a una PaO 2 de 60 mmHg (Insuficiencia Respiratoria). FISIOLOGÍA Como consecuencia inicial en la insuficiencia respiratoria pueden presentarse alteraciones en el nivel de oxígeno (O 2) y/o de anhídrido carbónico (CO 2), esto se explica por qué dentro del sistema respiratorio podemos distinguir en primer término los pulmones y su circulación, que es donde se realiza el intercambio gaseoso, su alteración produce hipoxemia con normocapnia o hipercapnia y en segundo término a la bomba que lo ventila que comprende la pared toráxica que incluye la pleura y el diafragma así como los músculos respiratorios y los componentes del sistema nervioso central y periférico, cuya disfunción produce hipoventilación que produce principalmente hipercapnea y en menor grado hipoxemia, además podemos identificar problemas en la vía aérea que pueden causar ambos tipos de situaciones. Describir la insuficiencia respiratoria como hipoxémica o hipercarbica provee alguna información acerca del déficit fisiológico que la produce, sin embargo, una mejor comprensión y reconocimiento de la fisiopatología, considerando individualmente cada uno de los componentes del sistema respiratorio que son requeridos para su funcionamiento fisiológico, nos permitiría una estrategia de diagnóstico y tratamiento 2, 5, 6. Fisiología de los componentes del sistema respiratorio Sistema Nervioso: Esto es el sistema de control, y comprende el núcleo dorsal y ventral del grupo de control medular respiratorio y sus nervios aferentes y eferentes asociados. Estos actúan de común acuerdo con la corteza cerebral para determinar frecuencia y esfuerzo respiratorio. RESUMEN La función respiratoria básica es el intercambio gaseoso de oxígeno y dióxido carbono; lo que implica un perfecto equilibrio y control entre los componentes del sistema respiratorio. a insuficiencia respiratoria aguda (IRA) es la incapacidad del sistema respiratorio de cumplir su función básica, que es el intercambio gaseoso de oxígeno y dióxido de carbono. Palabras clave: Insuficiencia respiratoria. ABSTRACT Basic respiratory function is gas exchange of oxygen and carbon dioxide, which implies a perfect balance and control between the components of the respiratory system. acute respiratory failure (ARF) is the inability of the respiratory system to fulfill its basic function, which is the gas exchange of oxygen and carbon dioxide.},
+   abstract = {Artículo de revisión La función respiratoria básica es el intercambio gaseoso de oxígeno y dióxido carbono; lo que implica un perfecto equilibrio y control entre los componentes del sistema respiratorio. Figura 1. Una falla en este proceso fundamental para la vida, es, en diferentes grados de intensidad, causa muy frecuente de solicitud de atenciones de salud, tanto prehospitalaria como hospitalaria. Por lo tanto es imprescindible aprender a reconocer rápidamente las circunstancias que la produjeron, así como también los síntomas y signos que encontramos en estos pacientes, de esta manera seremos capaces de una presunción diagnóstica rápida y atención inicial apropiada, aplicando inmediatamente las medidas de soporte básico y avanzado en forma eficiente a los pacientes con insuficiencia respiratoria aguda. DEFINICIÓN La insuficiencia respiratoria aguda (IRA) es la incapacidad del sistema respiratorio de cumplir su función básica, que es el intercambio gaseoso de oxígeno y dióxido de carbono entre el aire ambiental y la sangre circulante, ésta debe realizarse en forma eficaz y adecuada a las necesidades metabólicas del organismo, teniendo en cuenta la edad, los antecedentes y la altitud en que se encuentra el paciente. Entonces en la práctica, según Campbell: la insuficiencia respiratoria se define como la presencia de una hipoxemia arterial (PaO 2 menor de 60 mmHg), en reposo, a nivel del mar y respirando aire ambiental, acompañado o no de hipercapnia (PaCO 2 mayor de 45 mmHg). Denominaremos solo como hipoxemia cuando la PaO 2 se encuentre entre 60 y 80 mmHg 1, 2-4. En la atención prehospitalaria con guía de pulsioximetría, se pueden considerar que valores de Saturación de Oxígeno de 90\% a 95\% equivalen a PaO 2 de 60 a 80 mmHg (Hipoxemia) y si es de 90\% equivale a una PaO 2 de 60 mmHg (Insuficiencia Respiratoria). FISIOLOGÍA Como consecuencia inicial en la insuficiencia respiratoria pueden presentarse alteraciones en el nivel de oxígeno (O 2) y/o de anhídrido carbónico (CO 2), esto se explica por qué dentro del sistema respiratorio podemos distinguir en primer término los pulmones y su circulación, que es donde se realiza el intercambio gaseoso, su alteración produce hipoxemia con normocapnia o hipercapnia y en segundo término a la bomba que lo ventila que comprende la pared toráxica que incluye la pleura y el diafragma así como los músculos respiratorios y los componentes del sistema nervioso central y periférico, cuya disfunción produce hipoventilación que produce principalmente hipercapnea y en menor grado hipoxemia, además podemos identificar problemas en la vía aérea que pueden causar ambos tipos de situaciones. Describir la insuficiencia respiratoria como hipoxémica o hipercarbica provee alguna información acerca del déficit fisiológico que la produce, sin embargo, una mejor comprensión y reconocimiento de la fisiopatología, considerando individualmente cada uno de los componentes del sistema respiratorio que son requeridos para su funcionamiento fisiológico, nos permitiría una estrategia de diagnóstico y tratamiento 2, 5, 6. Fisiología de los componentes del sistema respiratorio Sistema Nervioso: Esto es el sistema de control, y comprende el núcleo dorsal y ventral del grupo de control medular respiratorio y sus nervios aferentes y eferentes asociados. Estos actúan de común acuerdo con la corteza cerebral para determinar frecuencia y esfuerzo respiratorio. RESUMEN La función respiratoria básica es el intercambio gaseoso de oxígeno y dióxido carbono; lo que implica un perfecto equilibrio y control entre los componentes del sistema respiratorio. a insuficiencia respiratoria aguda (IRA) es la incapacidad del sistema respiratorio de cumplir su función básica, que es el intercambio gaseoso de oxígeno y dióxido de carbono. Palabras clave: Insuficiencia respiratoria. ABSTRACT Basic respiratory function is gas exchange of oxygen and carbon dioxide, which implies a perfect balance and control between the components of the respiratory system. acute respiratory failure (ARF) is the inability of the respiratory system to fulfill its basic function, which is the gas exchange of oxygen and carbon dioxide.},
    author = {Fernando R Gutiérrez Muñoz},
    issue = {4},
    journal = {Acta Med Per},
