--- a/lib/chapter1.tex
+++ b/lib/chapter1.tex
@@ -12,7 +12,7 @@ Una de las posibles complicaciones graves derivadas del cuadro bronquiolítico e
 
 Es importante destacar que no todos los casos de bronquiolitis conducen a insuficiencia respiratoria aguda. La mayoría de los niños con bronquiolitis presentan síntomas leves a moderados y se recuperan sin complicaciones graves. 
 
-La Oxigenación por Cánula Nasal de Alto Flujo, también conocida como: Oxigenación de Alto Flujo (OAF); es una técnica de soporte respiratorio no invasiva que se ha utilizado en niños con bronquiolitis aguda en unidades de cuidados intensivos (UCI), cuidados neonatales y plantas pediátricas. Una bronquilitis es considerada aguda cuando supone una insuficiencia respiratoria. La OAF pues ocnsituye una práctica terapéutica de primera línea en el manejo de pacientes con IRA. La OAF es una técnica que proporciona un flujo de gas humidificado y calentado a través de una cánula nasal a una velocidad superior a la ventilación espontánea del paciente. Esto puede mejorar la eliminación de secreciones, disminuir la inflamación de las vías respiratorias y reducir el gasto energético del paciente. En comparación con el oxígeno estándar, que es frío y seco, la terapia de oxígeno calentado y humidificado puede ser más beneficiosa para los pacientes con insuficiencia respiratoria aguda. (\cite{Daverio2019})
+La Oxigenación por Cánula Nasal de Alto Flujo, también conocida como: Oxigenación de Alto Flujo (OAF); es una técnica de soporte respiratorio no invasiva que se ha utilizado en niños con bronquiolitis aguda en unidades de cuidados intensivos (UCI), cuidados neonatales y plantas pediátricas. Una bronquilitis es considerada aguda cuando supone una insuficiencia respiratoria. La OAF pues consituye una práctica terapéutica de primera línea en el manejo de pacientes con IRA. La OAF es una técnica que proporciona un flujo de gas humidificado y calentado a través de una cánula nasal a una velocidad superior a la ventilación espontánea del paciente. Esto puede mejorar la eliminación de secreciones, disminuir la inflamación de las vías respiratorias y reducir el gasto energético del paciente. En comparación con el oxígeno estándar, que es frío y seco, la terapia de oxígeno calentado y humidificado puede ser más beneficiosa para los pacientes con insuficiencia respiratoria aguda. (\cite{Daverio2019})
 
 
 \subsection{Background and literature review}
